--- a/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
@@ -16,9 +16,9 @@
         <h2>¡Bienvenidos a Mi Tienda!</h2>
         <p>Aquí encontrarás una gran variedad de productos para tus necesidades.</p>
         <div class="botones">
-            <a href="FormularioCamionero.html"><button>Comprar</button></a>
+            <a href=""><button>Comprar</button></a>
             <a href=""><button>Usuario</button></a>
-            <a href=""><button>Repartidor</button></a>
+            <a href="FormularioRepartidor.html"><button>Repartidor</button></a>
         </div>
     </section>
 </main>
