--- a/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
@@ -17,7 +17,7 @@
         <p>Aquí encontrarás una gran variedad de productos para tus necesidades.</p>
         <div class="botones">
             <a href=""><button>Comprar</button></a>
-            <a href=""><button>Usuario</button></a>
+            <a href="FormularioComprador.html"><button>Usuario</button></a>
             <a href="FormularioRepartidor.html"><button>Repartidor</button></a>
         </div>
     </section>
