--- a/src/main/kotlin/com/example/trabajoada/Html/FormularioPaquete.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/FormularioPaquete.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="http://localhost:8080/paquete/add" method="post" >
+    <label for="idComprador">Id Comprador:</label><br>
+    <input type="text" id="idComprador" name="idComprador"><br>
+    <label for="idRepartidor">idRepartidor:</label><br>
+    <input type="text" id="idRepartidor" name="idRepartidor"><br><br>
+    <label for="descripcion">descripcion</label>
+    <input type="text" id="descripcion" name="descripcion"><br>
+    <input type="submit" value="Enviar">
+</form>
 </body>
 </html>
