--- a/src/main/kotlin/com/example/trabajoada/Html/FormularioRepartidor.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/FormularioRepartidor.html
@@ -37,5 +37,17 @@
     <input type="submit" value="Enviar">
 
 </form>
+<br>
+<form action="http://localhost:8080/repartidor/PorNombre" method="get">
+    <label for="nombre3">Nombre</label>
+    <input type="text" id="nombre3" name="nombre">
+    <input type="submit" value="Enviar">
+</form>
+<form action="http://localhost:8080/repartidor/PorEmail" method="get">
+    <label for="emailR">Email</label>
+    <input type="text" id="emailR" name="email">
+    <input type="submit" value="Enviar">
+</form>
+
 </body>
 </html>
