--- a/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
@@ -13,10 +13,9 @@
 
 <main>
     <section class="presentacion">
-        <h2>¡Bienvenidos a Mi Tienda!</h2>
-        <p>Aquí encontrarás una gran variedad de productos para tus necesidades.</p>
+        <h1>¡Bienvenidos a Mi Tienda!</h1>
         <div class="botones">
-            <a href=""><button>Comprar</button></a>
+            <a href="FormularioPaquete.html"><button>Comprar</button></a>
             <a href="FormularioComprador.html"><button>Usuario</button></a>
             <a href="FormularioRepartidor.html"><button>Repartidor</button></a>
         </div>
