--- a/src/main/kotlin/com/example/trabajoada/Html/FormularioComprador.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/FormularioComprador.html
@@ -5,6 +5,14 @@
     <title></title>
 </head>
 <body>
-
+<form action="http://localhost:8080/Comprador/add" method="post" >
+    <label for="nombre">Nombre:</label><br>
+    <input type="text" id="nombre" name="nombre"><br>
+    <label for="email">Email:</label><br>
+    <input type="text" id="email" name="email"><br><br>
+    <label for="dni">Dni</label>
+    <input type="text" id="dni" name="dni"><br>
+    <input type="submit" value="Enviar">
+</form>
 </body>
 </html>
