--- a/src/main/kotlin/com/example/trabajoada/Html/FormularioCOadd.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/FormularioCOadd.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Agregar Compra</title>
+    <link rel="stylesheet" href="../Css/formulario.css">
 </head>
 <body>
+<h1>Agregar nuevo Compra</h1>
 <form action="http://localhost:8080/paquete/add" method="post" >
-    <label for="idComprador">Id Comprador:</label><br>
+    <label for="idComprador">idComprador:</label><br>
     <input type="text" id="idComprador" name="idComprador"><br>
     <label for="idRepartidor">idRepartidor:</label><br>
     <input type="text" id="idRepartidor" name="idRepartidor"><br><br>
