--- a/src/main/kotlin/com/example/trabajoada/Html/FormularioCadd.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/FormularioCadd.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Agregar Comprador</title>
+    <link rel="stylesheet" href="../Css/formulario.css">
 </head>
 <body>
+<h1>Agregar nuevo Comprador</h1>
 <form action="http://localhost:8080/Comprador/add" method="post" >
     <label for="nombre">Nombre:</label><br>
     <input type="text" id="nombre" name="nombre"><br>
