--- a/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
+++ b/src/main/kotlin/com/example/trabajoada/Html/PaginaDeInicio.html
@@ -15,9 +15,9 @@
     <section class="presentacion">
         <h1>¡Bienvenidos a Mi Tienda!</h1>
         <div class="botones">
-            <a href="FormularioPaquete.html"><button>Comprar</button></a>
-            <a href="FormularioComprador.html"><button>Usuario</button></a>
-            <a href="FormularioRepartidor.html"><button>Repartidor</button></a>
+            <a href="BotonesComprador.html"><button>Usuario</button></a>
+            <a href="BotonesRepartidor.html"><button>Repartidor</button></a>
+            <a href="BotonesComprar.html"><button>Comprar</button></a>
         </div>
     </section>
 </main>
